--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ ruma = { version = "0.2.0", features = ["api", "client-api", "appservice-api"] }
 reqwest = { version = "0.11.4", features = ["blocking"] }
 openssl = { version = "0.10.35", features = ["vendored"] }
 serde = { version = "1.0.127", features = ["derive"] }
-toml = "0.5.8"
+serde_yaml = "0.8.17"
