--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ base32 = "0.4.0"
 openssl = { version = "0.10.35", features = ["vendored"] }
 rand = "0.8.4"
 reqwest = { version = "0.11.4", features = ["json"] }
-ruma = { version = "0.3.0", features = ["api", "client-api", "appservice-api"] }
+ruma = { version = "0.3.0", features = ["client-api-c"] }
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
 serde_yaml = "0.8.17"
