--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,8 @@ anyhow = "1.0.43"
 base32 = "0.4.0"
 openssl = { version = "0.10.35", features = ["vendored"] }
 rand = "0.8.4"
-reqwest = { version = "0.11.4", features = ["json"] }
-ruma = { version = "0.3.0", features = ["client-api-c"] }
+reqwest = "0.11.4"
+ruma = { version = "0.3.0", features = ["client-api-c", "client-ext-client-api", "client-reqwest"] }
 serde = { version = "1.0.127", features = ["derive"] }
-serde_json = "1.0.66"
 serde_yaml = "0.8.17"
 tokio = { version = "1.10.0", features = ["full"] }
